# p2s

./: Cargo.toml  Dockerfile
src/: main.rs
