[package]
name = "p2s"
version = "2023.5.29"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sentry = { version = "*", default-features = false, features = [
    "reqwest",
    "rustls",
] }
reqwest = { version = "*", default-features = false, features = [
    "rustls",
    # "tokio-rustls",
    # "hyper-rustls",
] }
tokio = { version = "*", features = ["full"] }
anyhow = "*"
sxd-xpath = "*"
sxd_html = "*"
