[package]
name = "p2s"
version = "2023.6.4"
edition = "2021"

[dependencies]
sentry = { version = "*", default-features = false, features = [
    "reqwest",
    "rustls",
] }
reqwest = { version = "*", default-features = false, features = [
    "rustls",
    "blocking",
] }
anyhow = "*"
sxd-xpath = "*"
sxd_html = "*"
clap = { version = "*", features = ["derive", "env"] }
