[package]
name = "p2s"
version = "2023.6.19"
edition = "2021"

[dependencies]
sentry = { version = "*", default-features = false, features = [
    "reqwest",
    "rustls",
] }
reqwest = { version = "*", default-features = false, features = [
    "rustls",
    "blocking",
    "json",
] }
anyhow = "*"
clap = { version = "*", features = ["derive", "env"] }
md5 = { version = "*" }
serde_json = { version = "*" }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
